fixed checkboxes not visible in chrome

--- a/static/styles/default_style.css
+++ b/static/styles/default_style.css
@@ -127,7 +127,3 @@ button.btn-primary:active {
 .table-striped td {
     text-align: center;
 }
-
-input[type=checkbox] {
-    width: 100%;
-}
